2011-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCpeeph.c,
	  src/z80/main.c,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Added new peephole function notUsedFrom() to check for variable uses starting from label,
	  added it as condition in peepholes where appropriate, modified notUsed()
          peephole function to not rely on first argument being constant or %1.

2011-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed SIGSEGV crash due to incorrect register pair cache spilling.

2011-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Give warning instead of crashing when failing to parse ex line node.

2011-04-05 Borut Razem <borut.razem AT gmail.com>

	* src/src.vcxproj, src/src.vcxproj.filters, src/z80/gen.c:
	  fixed MSVC 2010 compilation
	* src/SDCCasm.c, src/SDCCasm.h:
	  removed tsprintf(), dbuf_tprintf() is used instead
	* src/z80/gen.c: fixed bug in fetchLitPair()

2011-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Avoid assignments where the result overwrites operands in some unary operations.
	* src/z80/gen.c:
	  Avoid unnecessary saving of iy in builtin memcpy().

2011-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Avoid assignments where the result overwrites operands in subtraction, addition, bitwise and, xor;
	  get correct cost for bitwise or.
	* src/z80/gen.c:
	  Remove workaround for result overwritings operands in addition; fixed commitPair() for swapped bytes in target.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed broken or when result is sfr.
	* src/z80/peeph-z80.def:
	  Fixed broken peephole for combining additions next to pushes.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Allow iy as operand to left shift and decrement.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc: