@@ -1,3 +1,9 @@
+2011-04-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc.c:
+	  Fixed bug that allowed old register allocator to use IY even when the new one does, too,
+	  which led to conflicts in the assignment.
+
 2011-04-07 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/port.h,
